src/test/ui/imports/import-loop-2.stderr
error[E0432]: unresolved import `a::x`
  --> $DIR/import-loop-2.rs:18:13
   |
LL |     pub use a::x;
   |             ^^^^ no `x` in `a`

error[E0601]: `main` function not found in crate `import_loop_2`
   |
   = note: the main function must be defined at the crate level but you have one or more functions named 'main' that are not defined at the crate level. Either move the definition or attach the `#[main]` attribute to override this behavior.
note: here is a function named 'main'
  --> $DIR/import-loop-2.rs:20:5
   |
LL |     fn main() { let y = x; }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors occurred: E0432, E0601.
For more information about an error, try `rustc --explain E0432`.
